--- a/.classpath
+++ b/.classpath
@@ -3,7 +3,7 @@
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="src" path="src/test/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="vendor/lib/guava-11.0.1.jar"/>
+	<classpathentry kind="lib" path="vendor/lib/guava-11.0.1.jar" sourcepath="vendor/src/guava-11.0.1-sources.jar"/>
 	<classpathentry kind="lib" path="vendor/buildlib/hamcrest-all-1.3.0RC2.jar"/>
 	<classpathentry kind="lib" path="vendor/buildlib/jmock-2.5.1.jar"/>
 	<classpathentry kind="lib" path="vendor/buildlib/junit-dep-4.10.jar"/>
